--- a/debian/rules
+++ b/debian/rules
@@ -33,10 +33,14 @@ $(SRC_DIR):
 build: build-arch build-indep
 
 build-arch: build-arch-stamp
-build-arch-stamp: $(SRC_DIR)
-	cd $(SRC_DIR)/libcam && $(PMAKE)
-	cd $(SRC_DIR)/libsbuf && $(PMAKE)
+build-arch-stamp: build-cam build-sbuf
 	touch build-arch-stamp
+
+build-cam: build-sbuf $(SRC_DIR)
+	cd $(SRC_DIR)/libcam && $(PMAKE)
+
+build-sbuf: $(SRC_DIR)
+	cd $(SRC_DIR)/libsbuf && $(PMAKE)
 
 build-indep: build-indep-stamp
 build-indep-stamp:
@@ -62,8 +66,8 @@ install-arch:
 	dh_installdirs -s
 
 	mkdir -p $(DESTDIR)/usr/{lib,include,share/man/man3}
-	cd $(SRC_DIR)/libcam && $(PMAKE) install
 	cd $(SRC_DIR)/libsbuf && $(PMAKE) install
+	cd $(SRC_DIR)/libcam && $(PMAKE) install
 
 	dh_install -s
 # Must not depend on anything. This is to be called by
