--- a/debian/control
+++ b/debian/control
@@ -2,13 +2,14 @@ Source: freebsd-libs
 Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
-Build-Depends: debhelper (>= 4.1.0), freebsd5-buildutils, libbsd-dev
+Uploaders: Aurelien Jarno <aurel32@debian.org>
+Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev
 Standards-Version: 3.6.1
 
 Package: libcam-dev
 Section: libdevel
 Architecture: kfreebsd-i386
-Depends: ${shlibs:Depends}, libcam0 (>= ${Source-Version}), libc-dev, libbsd-dev
+Depends: ${shlibs:Depends}, libcam0 (>= ${Source-Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: FreeBSD CAM (Common Access Method) library
  This package includes static objects and headers.
 
@@ -21,11 +22,24 @@ Description: FreeBSD CAM (Common Access Method) library
 Package: libsbuf-dev
 Section: libdevel
 Architecture: kfreebsd-i386
-Depends: ${shlibs:Depends}, libsbuf0 (>= ${Source-Version}), libc-dev
+Depends: ${shlibs:Depends}, libsbuf0 (>= ${Source-Version}), libc0.1-dev | libc-dev
 Description: FreeBSD libsbuf
  This package includes static objects.
 
 Package: libsbuf0
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}
+Description: FreeBSD libsbuf
+ This package includes shared objects.
+ 
+Package: libusbhid-dev
+Section: libdevel
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}, libusbhid1 (>= ${Source-Version}), libc0.1-dev | libc-dev
+Description: FreeBSD libsbuf
+ This package includes static objects.
+
+Package: libusbhid1
 Architecture: kfreebsd-i386
 Depends: ${shlibs:Depends}
 Description: FreeBSD libsbuf
