--- a/debian/rules
+++ b/debian/rules
@@ -9,12 +9,7 @@ SHELL=bash
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-SRC_DIR=lib
-PATH:=/usr/lib/freebsd:$(PATH)
-DESTDIR=$(CURDIR)/debian/tmp
-PMAKE=make DESTDIR=$(DESTDIR)
-
-CFLAGS = -Wall -g
+CFLAGS = -Wall -g -pipe -fPIC -D__FBSDID\(s\)=
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
@@ -22,8 +17,15 @@ else
 	CFLAGS += -O2
 endif
 
+SRC_DIR=lib
+PATH:=/usr/lib/freebsd:$(PATH)
+DESTDIR=$(CURDIR)/debian/tmp
+PMAKE=make DESTDIR=$(DESTDIR) CFLAGS="$(CFLAGS)"
+
 $(SRC_DIR):
 	tar -xzf $(CURDIR)/lib.tar.gz
+	tar -C $(SRC_DIR) -xjf /usr/src/kfreebsd-source-5.4.tar.bz2 kfreebsd-source-5.4/sys/kern/subr_sbuf.c kfreebsd-source-5.4/sys/cam
+	mv $(SRC_DIR)/kfreebsd-source-5.4 $(SRC_DIR)/kernel
 	
 	for i in $(CURDIR)/debian/patches/*.diff ; do \
 		echo "--- Patch $$i ---" ; \
@@ -33,7 +35,7 @@ $(SRC_DIR):
 build: build-arch build-indep
 
 build-arch: build-arch-stamp
-build-arch-stamp: build-cam build-sbuf
+build-arch-stamp: build-cam build-sbuf build-usbhid
 	touch build-arch-stamp
 
 build-cam: build-sbuf $(SRC_DIR)
@@ -41,6 +43,9 @@ build-cam: build-sbuf $(SRC_DIR)
 
 build-sbuf: $(SRC_DIR)
 	cd $(SRC_DIR)/libsbuf && $(PMAKE)
+
+build-usbhid: $(SRC_DIR)
+	cd $(SRC_DIR)/libusbhid && $(PMAKE)
 
 build-indep: build-indep-stamp
 build-indep-stamp:
@@ -52,7 +57,7 @@ clean:
 	rm -f build-arch-stamp build-indep-stamp
 
 	# Add here commands to clean up after the build process.
-	rm -rf $(SRC_DIR)
+	rm -rf $(SRC_DIR) $(KERN_DIR)
 
 	dh_clean 
 
@@ -68,8 +73,10 @@ install-arch:
 	mkdir -p $(DESTDIR)/usr/{lib,include,share/man/man3}
 	cd $(SRC_DIR)/libsbuf && $(PMAKE) install
 	cd $(SRC_DIR)/libcam && $(PMAKE) install
+	cd $(SRC_DIR)/libusbhid && $(PMAKE) install
 
-	dh_install -s
+	dh_install -s --list-missing --sourcedir=debian/tmp
+
 # Must not depend on anything. This is to be called by
 # binary-arch/binary-indep
 # in another 'make' thread.
@@ -77,7 +84,7 @@ binary-common:
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs 
-#	dh_installdocs
+	dh_installdocs
 #	dh_installexamples
 #	dh_installmenu
 #	dh_installdebconf	
@@ -89,7 +96,7 @@ binary-common:
 #	dh_installcron
 #	dh_installinfo
 #	dh_installman
-#	dh_link
+	dh_link
 	dh_strip
 	dh_compress 
 	dh_fixperms
