* Renamed libsrbuf to libfreebsd and added nlist.   * Added libkvm from old package freebsd-kvm-5.2.1. Some parts are still     disabled, but less than in the previous version.   * Ship a shared library, so that packages will benefit from improvements     of the library.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@909 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -3,23 +3,8 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
-Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev
+Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev, libfreebsd-dev
 Standards-Version: 3.6.2
-
-Package: libcam0
-Architecture: kfreebsd-i386
-Depends: ${shlibs:Depends}, libsbuf0 (>= ${Source-Version})
-Description: FreeBSD CAM (Common Access Method) library
- The CAM (Common Access Method) library provides a way for userland
- SCSI applications to construct a SCSI command.
-
-Package: libcam-dev
-Section: libdevel
-Architecture: kfreebsd-i386
-Depends: ${shlibs:Depends}, libcam0 (>= ${Source-Version}), libc0.1-dev | libc-dev, libbsd-dev
-Description: Development files for libcam 
- This package contains the header files and static library needed to
- compile applications that use libcam.
 
 Package: libsbuf0
 Architecture: kfreebsd-i386
@@ -37,6 +22,21 @@ Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
 
+Package: libcam0
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}, libfreebsd0 (>= ${Source-Version})
+Description: FreeBSD CAM (Common Access Method) library
+ The CAM (Common Access Method) library provides a way for userland
+ SCSI applications to construct a SCSI command.
+
+Package: libcam-dev
+Section: libdevel
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}, libcam0 (>= ${Source-Version}), libc0.1-dev | libc-dev, libbsd-dev
+Description: Development files for libcam 
+ This package contains the header files and static library needed to
+ compile applications that use libcam.
+
 Package: libusbhid1
 Architecture: kfreebsd-i386
 Depends: ${shlibs:Depends}
@@ -52,8 +52,23 @@ Description: FreeBSD library to access USB HID devices
 Package: libusbhid-dev
 Section: libdevel
 Architecture: kfreebsd-i386
-Depends: ${shlibs:Depends}, libusbhid1 (>= ${Source-Version}), libc0.1-dev | libc-dev
+Depends: ${shlibs:Depends}, libusbhid1 (>= ${Source-Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
+
+Package: libkvm0
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}
+Description: FreeBSD kvm (kernel memory interface) library
+ The kvm library provides a uniform interface for accessing kernel virtual
+ memory images, including live systems and crash dumps.
+
+Package: libkvm-dev
+Section: libdevel
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}, libkvm0 (>= ${Source-Version}), libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
+Description: Development files for libkvm
+ This package contains the header files and static library needed to
+ compile applications that use libkvm.
 
