Added libipx to freebsd-libs
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@912 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -72,3 +72,17 @@ Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
 
+Package: libipx2
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}
+Description: FreeBSD IPX address conversion support library
+ The IPX library provides a set of routune to convert IPX addresses.
+
+Package: libipx-dev
+Section: libdevel
+Architecture: kfreebsd-i386
+Depends: ${shlibs:Depends}, libipx2 (>= ${Source-Version}), libc0.1-dev | libc-dev
+Description: Development files for libipx
+ This package contains the header files and static library needed to
+ compile applications that use libipx.
+
