Compile fix for libkvm libcam0 don't need to depend on libfreebsd0
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1210 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Description: Development files for libsbuf
 
 Package: libcam0
 Architecture: kfreebsd-i386
-Depends: ${shlibs:Depends}, libfreebsd0 (>= ${Source-Version})
+Depends: ${shlibs:Depends}
 Description: FreeBSD CAM (Common Access Method) library
  The CAM (Common Access Method) library provides a way for userland
  SCSI applications to construct a SCSI command.
