--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ SHELL=bash
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-CFLAGS = -Wall -g -pipe -fPIC -D__FBSDID\(s\)=
+CFLAGS = -Wall -g -pipe -fPIC -D__FBSDID\(s\)= -I.
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
