Misc amd64 fixes.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1310 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, l
 Standards-Version: 3.6.2
 
 Package: libsbuf0
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
 Description: FreeBSD string buffer library
  This library provide a way to handle string buffers. It contains 
@@ -16,14 +16,14 @@ Description: FreeBSD string buffer library
  
 Package: libsbuf-dev
 Section: libdevel
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, libsbuf0 (>= ${Source-Version}), libc0.1-dev | libc-dev
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
 
 Package: libcam0
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
 Description: FreeBSD CAM (Common Access Method) library
  The CAM (Common Access Method) library provides a way for userland
@@ -31,14 +31,14 @@ Description: FreeBSD CAM (Common Access Method) library
 
 Package: libcam-dev
 Section: libdevel
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, libcam0 (>= ${Source-Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libcam 
  This package contains the header files and static library needed to
  compile applications that use libcam.
 
 Package: libusbhid1
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
 Description: FreeBSD library to access USB HID devices
  The usbhid library provides routines to extract data from USB Human 
@@ -51,14 +51,14 @@ Description: FreeBSD library to access USB HID devices
 		
 Package: libusbhid-dev
 Section: libdevel
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, libusbhid1 (>= ${Source-Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
 
 Package: libkvm0
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
 Description: FreeBSD kvm (kernel memory interface) library
  The kvm library provides a uniform interface for accessing kernel virtual
@@ -66,21 +66,21 @@ Description: FreeBSD kvm (kernel memory interface) library
 
 Package: libkvm-dev
 Section: libdevel
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, libkvm0 (>= ${Source-Version}), libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
 
 Package: libipx2
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
 Description: FreeBSD IPX address conversion support library
  The IPX library provides a set of routune to convert IPX addresses.
 
 Package: libipx-dev
 Section: libdevel
-Architecture: kfreebsd-i386
+Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}, libipx2 (>= ${Source-Version}), libc0.1-dev | libc-dev
 Description: Development files for libipx
  This package contains the header files and static library needed to
