libkvm0 is Priority: required (needed for freebsd-utils).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1377 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -58,6 +58,7 @@ Description: Development files for libusbhid
  compile applications that use libusbhid.
 
 Package: libkvm0
+Priority: required
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
 Description: FreeBSD kvm (kernel memory interface) library
