Move shared object of libbsd, libfreebsd and libkvm to /lib (unfucks freebsd-utils).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1392 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -81,6 +81,8 @@ install-arch:
 	cd $(SRC_DIR)/libcam && $(PMAKE) install
 	cd $(SRC_DIR)/libipx && $(PMAKE) install
 	cd $(SRC_DIR)/libkvm && $(PMAKE) install
+	# move libkvm.so to /lib
+	ln -sf /lib/libkvm.so.0 $(DESTDIR)/usr/lib/libkvm.so
 	cd $(SRC_DIR)/libusbhid && $(PMAKE) install
 
 	dh_install -s --list-missing --sourcedir=debian/tmp
