- First build on amd64. - Lots of cleanup: remove functions that are in libfreebsd, use dynamic regexps to get rid of many patch hunks, reenable commented code (thanks to new functions in libfreebsd).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1404 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
-Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev, libfreebsd-dev, libgdbm-dev
+Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev, libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.17) [kfreebsd-amd64]
 Standards-Version: 3.6.2
 
 Package: libsbuf0
