--- a/debian/rules
+++ b/debian/rules
@@ -9,7 +9,7 @@ SHELL=bash
 # This has to be exported to make some magic below work.
 export DH_OPTIONS
 
-CFLAGS = -Wall -g -pipe -fPIC -D__FBSDID\(s\)= -I.
+CFLAGS = -Wall -g -pipe -fPIC -I. -D_GNU_SOURCE
 
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
@@ -20,14 +20,24 @@ endif
 SRC_DIR=lib
 PATH:=/usr/lib/freebsd:$(PATH)
 DESTDIR=$(CURDIR)/debian/tmp
-PMAKE=make DESTDIR=$(DESTDIR) CFLAGS="$(CFLAGS)"
+PMAKE=make COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR)
+export LDADD=-lbsd -lfreebsd
 
 $(SRC_DIR):
 	tar -xzf $(CURDIR)/lib.tar.gz
 	tar -C $(SRC_DIR) -xjf /usr/src/kfreebsd-source-5.4.tar.bz2 kfreebsd-source-5.4/sys/kern/subr_sbuf.c kfreebsd-source-5.4/sys/cam
 	mv $(SRC_DIR)/kfreebsd-source-5.4 $(SRC_DIR)/kernel
+
+	find $(SRC_DIR) -type f | (set -e ; while read i ; do sed -i $$i \
+		-e "/^__FBSDID/d" \
+		-e "s/[ \t]*__\(dead2\|unused\|result\\)[ \t]*//g" \
+		-e "s,<sys/queue\.h>,<bsd/queue.h>,g" \
+		-e "s,<sys/iconv\.h>,<iconv.h>,g" \
+		-e "s/^LDADD=/LDADD+=/g" \
+		-e "s/getline/bsd_&/g" \
+	; done)
 	
-	for i in $(CURDIR)/debian/patches/*.diff ; do \
+	set -e ; for i in $(CURDIR)/debian/patches/*.diff ; do \
 		echo "--- Patch $$i ---" ; \
 		patch -p1 -d $(SRC_DIR) < $$i ; \
 	done
