--- a/debian/rules
+++ b/debian/rules
@@ -24,7 +24,7 @@ PMAKE=make COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 NOSHARE
 export LDADD=-lbsd -lfreebsd
 
 $(SRC_DIR):
-	tar -xzf $(CURDIR)/lib.tar.gz
+	tar -xzf $(CURDIR)/src.tar.gz
 	tar -C $(SRC_DIR) -xjf /usr/src/kfreebsd-source-5.4.tar.bz2 kfreebsd-source-5.4/sys/kern/subr_sbuf.c kfreebsd-source-5.4/sys/cam
 	mv $(SRC_DIR)/kfreebsd-source-5.4 $(SRC_DIR)/kernel
 
