--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
 Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev, libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.17) [kfreebsd-amd64], libexpat-dev
+# libexpat-dev: aka bsdxml. needed by libgeom
 Standards-Version: 3.6.2
 
 Package: libsbuf0
@@ -101,3 +102,9 @@ Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
 
+#Package: libstand-dev
+#Section: libdevel
+#Architecture: kfreebsd-i386 kfreebsd-amd64
+#Description: Support library for stand-alone applications
+# libstand provides a set of supporting functions for stand-alone applications,
+# mimicking where possible the standard BSD programming environment.
