Add libkiconv (patch from Andraz).
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@1554 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -102,3 +102,17 @@ Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
 
+Package: libkiconv1
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}
+Description: FreeBSD kernel side iconv library
+ The kiconv library provides multi-byte character conversion tables for kernel
+ side iconv service.
+
+Package: libkiconv-dev
+Section: libdevel
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}, libkiconv1 (>= ${Source-Version}), libc0.1-dev | libc-dev
+Description: Development files for libkiconv
+ This package contains the header files and static library needed to
+ compile applications that use libkiconv.
