--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: GNU/kFreeBSD Maintainers <debian-bsd@lists.debian.org>
 Uploaders: Aurelien Jarno <aurel32@debian.org>
-Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-5.4, freebsd5-buildutils, libbsd-dev, libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.17) [kfreebsd-amd64], libexpat-dev
+Build-Depends: debhelper (>= 4.1.0), kfreebsd-source-6.1, freebsd6-buildutils, libbsd-dev, libfreebsd-dev, libgdbm-dev, kfreebsd-kernel-headers (>= 0.20), libexpat-dev
 # libexpat-dev: aka bsdxml. needed by libgeom
 Standards-Version: 3.6.2
 
