--- a/debian/control
+++ b/debian/control
@@ -88,6 +88,20 @@ Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
 
+Package: libdevstat5
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}
+Description: FreeBSD devstat (kernel interface) library
+ The devstat library provides a uniform interface for accessing kernel devstat interface.
+
+Package: libdevstat-dev
+Section: libdevel
+Architecture: kfreebsd-i386 kfreebsd-amd64
+Depends: ${shlibs:Depends}, libdevstat5 (>= ${Source-Version}), libkvm-dev, libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
+Description: Development files for libdevstat
+ This package contains the header files and static library needed to
+ compile applications that use libdevstat.
+
 Package: libipx2
 Architecture: kfreebsd-i386 kfreebsd-amd64
 Depends: ${shlibs:Depends}
