* Don't use ${shlibs:Depends} ofr -dev packages.   * Only link with needed libraries.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2106 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Description: FreeBSD string buffer library
 Package: libsbuf-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libsbuf0 (>= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libsbuf0 (>= ${binary:Version}), libc0.1-dev | libc-dev
 Description: Development files for libsbuf
  This package contains the header files and static library needed to
  compile applications that use libsbuf.
@@ -33,7 +33,7 @@ Description: FreeBSD CAM (Common Access Method) library
 Package: libcam-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libcam0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libcam0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libcam 
  This package contains the header files and static library needed to
  compile applications that use libcam.
@@ -48,7 +48,7 @@ Description: FreeBSD GEOM library
 Package: libgeom-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libgeom0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libgeom0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libgeom
  This package contains the header files and static library needed to
  compile applications that use libcam.
@@ -68,7 +68,7 @@ Description: FreeBSD library to access USB HID devices
 Package: libusbhid-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libusbhid2 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
+Depends: libusbhid2 (>= ${binary:Version}), libc0.1-dev | libc-dev, libbsd-dev
 Description: Development files for libusbhid
  This package contains the header files and static library needed to
  compile applications that use libusbhid.
@@ -83,7 +83,7 @@ Description: FreeBSD kvm (kernel memory interface) library
 Package: libkvm-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
+Depends: libkvm0 (>= ${binary:Version}), libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
 Description: Development files for libkvm
  This package contains the header files and static library needed to
  compile applications that use libkvm.
@@ -98,7 +98,7 @@ Description: FreeBSD devstat (kernel interface) library
 Package: libdevstat-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libdevstat5 (>= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
+Depends: libdevstat5 (>= ${binary:Version}), libkvm-dev, libc0.1-dev | libc-dev, libfreebsd-dev, libbsd-dev
 Description: Development files for libdevstat
  This package contains the header files and static library needed to
  compile applications that use libdevstat.
@@ -112,7 +112,7 @@ Description: FreeBSD IPX address conversion support library
 Package: libipx-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libipx2 (>= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libipx2 (>= ${binary:Version}), libc0.1-dev | libc-dev
 Description: Development files for libipx
  This package contains the header files and static library needed to
  compile applications that use libipx.
@@ -127,7 +127,7 @@ Description: FreeBSD kernel side iconv library
 Package: libkiconv-dev
 Section: libdevel
 Architecture: kfreebsd-i386 kfreebsd-amd64
-Depends: ${shlibs:Depends}, libkiconv2 (>= ${binary:Version}), libc0.1-dev | libc-dev
+Depends: libkiconv2 (>= ${binary:Version}), libc0.1-dev | libc-dev
 Description: Development files for libkiconv
  This package contains the header files and static library needed to
  compile applications that use libkiconv.
