* Fix a few bashisms in debian/rules.
git-svn-id: svn://anonscm.debian.org/glibc-bsd/trunk/freebsd-libs@2410 ae44cbe4-c7d5-0310-ae45-95c72a56cd7d

--- a/debian/rules
+++ b/debian/rules
@@ -95,7 +95,7 @@ install-arch:
 	dh_clean -k -s 
 	dh_installdirs -s
 
-	mkdir -p $(DESTDIR)/usr/{lib,include,share/man/man3}
+	mkdir -p $(DESTDIR)/usr/lib $(DESTDIR)/usr/include $(DESTDIR)/usr/share/man/man3
 	$(PMAKE) -C $(CURDIR)/lib/libsbuf install
 	$(PMAKE) -C $(CURDIR)/lib/libcam install
 	$(PMAKE) -C $(CURDIR)/lib/libgeom install
